2017-05-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28455.

	* src/nasl_plugins.c (nasl_plugin_add): Set args kb to nvticache kb to
	be used for storing nvts signature checks.

2017-05-23  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28456.

	* src/openvassd.c (main): Ignore SIGHUP until the scanner is ready.

2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28347 and r28358

	* src/pluginscheduler.c (get_next_plugin, get_next_in_range): New
	functions.
	(plugins_scheduler_next): Use new functions. Run all plugins up to
	ACT_GATHER_INFO before ACT_ATTACK plugins. Run ACT_END plugins after
	finishing other plugins.

2017-04-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_next): Fix compilation
	warning with GCC 7.

2017-04-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* Changelog: Correct a wrong entry date.

2017-04-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28264 with adjustments due to code changes.

	* src/attack.c (attack_start, launch_plugin): Use consistent
	hostname (ip) logging. Add fqdn to the messages.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28088, r28091, with adjustments due to code changes.

	* src/openvassd.c: Include network.h and add preprocessor directives to
	check the gnutls version.
	(main): Call openvas_SSL_init to initialize gnutls to avoid SIGSEGV
	in gnutls version prior to 3.3.0. Add preprocessor directives to
	check the gnutls version.

2017-03-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27968.

	* src/pluginscheduler.c (plugins_scheduler_next): Simplify checks for
	returning PLUG_RUNNING.

2017-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1.2.

2017-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.1.1 release.

	* CHANGES: Updated.
